--- a/src/app/pages/tournament-list/tournament-list.component.html
+++ b/src/app/pages/tournament-list/tournament-list.component.html
@@ -12,7 +12,7 @@
           <h2 class="text-xl font-semibold">{{ tournament.name }}</h2>
           <p>Id: {{ tournament.id }}</p>
           <p class="text-gray-600">{{ tournament.date }}</p>
-          <p>Teams: {{ tournament.teams.length }}</p>
+          <p>Teams: {{ tournament.teams.size }}</p>
         </div>
         <div class="space-x-2">
           <button
